Mobile menu fixed to stop overflow scroll issue

--- a/src/css/imports/drawer.css
+++ b/src/css/imports/drawer.css
@@ -1,5 +1,5 @@
 .drawer {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: -100vw;
 	z-index: 2;
